<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <EditText
            android:layout_marginTop="50dp"
            android:id="@+id/id_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="title"/>

        <EditText
            android:id="@+id/id_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="message"/>

        <Button
            android:id="@+id/notification1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_with_imp_high"
            android:onClick="createNotificationOne"/>

        <Button
            android:id="@+id/notification2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_with_imp_low"
            android:onClick="createNotificationTwo"/>

        <Button
            android:id="@+id/notification3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_with_imp_low"
            android:onClick="createNotificationThree"/>

        <Button
            android:id="@+id/notification4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_with_buttons"
            android:onClick="createNotificationwithButton"/>

        <Button
            android:id="@+id/notification5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_with_image"
            android:onClick="createNotificationwithImage"/>

        <Button
            android:id="@+id/notification6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_with_text"
            android:onClick="createNotificationwithBigtext"/>

    </LinearLayout>
</layout>